--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -281,6 +281,13 @@ ul#nav li.current a { color: #F06000; }
    margin-top: 6px;
 }
 
+#education, #work, #skills, #projects {
+   background: #fff;
+   padding-top: 50px;
+   padding-bottom: 50px;
+   visibility: hidden;
+}
+
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
